Poor performance/utilization with Splitgate
Description
Splitgate suffers from extreme frame drops (~40fps in areas where 140fps should be possible on e.g. Windows) in many areas.
The CPU (~50% single core?) & GPU (~65%) utilization seems to be poor, suggesting that some synchronization issue is unnecessarily degrading the performance.
SQTT capture
A SQTT trace has been captured while the frame drop is happening, but it might or might not contain the essential information to pinpoint the root cause.
PortalWars-Linux-Shipping_2021.12.12_18.49.22.rgp
Steps to reproduce
Install Splitgate from Steam (Free to play). You might need to finish the tutorial and level a bit up to run custom matches.
Make a private custom match room, and try the Stadium map. The frame rate tanks whenever the center open area is visible.
System information
System: Host: ishitatsuyuki-ryzen Kernel: 5.15.6-arch2-1 x86_64 bits: 64 compiler: gcc v: 11.1.0
Desktop: KDE Plasma 5.23.4 tk: Qt 5.15.2 wm: kwin_x11 dm: SDDM Distro: Arch Linux
CPU: Info: 8-Core model: AMD Ryzen 7 3700X bits: 64 type: MT MCP arch: Zen 2 rev: 0 cache: L1: 512 KiB L2: 4 MiB
L3: 32 MiB
flags: avx avx2 ht lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm bogomips: 115032
Speed: 2743 MHz min/max: 2200/3600 MHz boost: enabled Core speeds (MHz): 1: 2743 2: 2022 3: 2419 4: 2043
5: 3881 6: 2098 7: 2107 8: 2209 9: 2184 10: 2119 11: 3864 12: 2057 13: 2087 14: 2071 15: 1947 16: 2007
Graphics: Device-1: Advanced Micro Devices [AMD/ATI] Navi 10 [Radeon RX 5600 OEM/5600 XT / 5700/5700 XT] vendor: Tul
driver: amdgpu v: kernel bus-ID: 0a:00.0 chip-ID: 1002:731f
Display: x11 server: X.Org 1.21.1.1 compositor: kwin_x11 driver: loaded: amdgpu resolution: 2560x1440~144Hz
s-dpi: 96
OpenGL: renderer: AMD Radeon RX 5700 XT (NAVI10 DRM 3.42.0 5.15.6-arch2-1 LLVM 13.0.0) v: 4.6 Mesa 21.3.1
direct render: Yes
Further information (optional)
This does not seem to happen with AMDVLK, where a high frame rate is sustained. AMDVLK does have other stuttering issues though (might be caused by the pipeline cache not being warm?).