src/amd/vulkan/radv_private.h
@@ -370,6 +370,7 @@ struct radv_instance {
    bool disable_aniso_single_level;
    bool zero_vram;
    bool disable_sinking_load_input_fs;
+   bool flush_before_query_copy;
 };
 
 VkResult radv_init_wsi(struct radv_physical_device *physical_device);
