src/util/driconf.h
@@ -582,6 +582,11 @@
    DRI_CONF_OPT_B(radv_dgc, def, \
                   "Expose an experimental implementation of VK_NV_device_generated_commands")
 
+#define DRI_CONF_RADV_FLUSH_BEFORE_QUERY_COPY(def) \
+  DRI_CONF_OPT_B( \
+      radv_flush_before_query_copy, def, \
+      "Wait for timestamps to be written before a query copy command")
+
 /**
  * \brief ANV specific configuration options
  */
